--- a/manyFiles.mq.html
+++ b/manyFiles.mq.html
@@ -37,7 +37,7 @@
         </script>
         <![endif]-->
   <div id="+" class="bodyDiv">
-    <div class="bodyHeaderTitle">Manuscript 1
+    <div class="bodyHeaderTitle" data-type="nowiki">Manuscript 1
     </div>
     <ul>
     <div id="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -84,9 +84,9 @@
         </div>
         <hr>
     </div>
-    <span><div class="topLink" align="right"><a href="#+">(top)</a></div></span>
   
     </ul>
   </div>
+<span><div class="topLink" align="right"><a href="#+">(top)</a></div></span>
 </body>
 </html>
